--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue-load-scroll",
-  "version": "0.1.0",
+  "name": "vue-classic-scroll",
+  "version": "0.1.3",
   "author": "Xue jihong",
   "license": "MIT",
   "private": false,
-  "main": "dist/MyScroll.umd.min.js",
+  "main": "dist/MyScroll.common.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/XueMary/vue-scroll.git"
@@ -15,7 +15,8 @@
   ],
   "keywords": [
     "vue",
-    "scroll"
+    "scroll",
+    "classic"
   ],
   "bugs": {
     "url": "https://github.com/XueMary/vue-scroll/issues"
@@ -25,7 +26,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-bundle": "vue-cli-service build --target lib --name MyScroll ./src/components/index.js",
+    "build-bundle": "vue-cli-service build --target lib --name MyScroll ./src/components/vue-scroll/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
