--- a/package.json
+++ b/package.json
@@ -22,17 +22,11 @@
     "url": "https://github.com/XueMary/vue-scroll/issues"
   },
   "homepage": "https://github.com/XueMary/vue-scroll#readme",
-
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-bundle": "vue-cli-service build --target lib --name MyScroll ./src/components/vue-scroll/index.js",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build --target lib --name MyScroll ./src/vue-scroll/index.js"
   },
   "dependencies": {
-    "better-scroll": "^1.14.1",
-    "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "better-scroll": "^1.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
